# routes/api.php
@@ -25,16 +25,24 @@ Route::post('v1/login', [AuthController::class, 'login']);
 
 //API v1
 Route::group(['prefix' => 'v1', 'middleware' => 'auth:api'], function () {
+
+
     // User Routes
     // Get all users
     Route::get('/users', [UserController::class, 'index'])->middleware(['scope:admin']); // Admin
     // create new user
     Route::middleware(['scopes:admin'])->post('/users', [UserController::class, 'store']); // Admin
+    //check email is already registerd the rooute is placed at this position since
+    //laravel takes email as model if the route is given after get user entity.
+
     // update exsisting user
     Route::put('/users/{user}', [UserController::class, 'update']); // Admin or current user
     // get user by id
     Route::get('/users/{user}', [UserController::class, 'show']); // Admin or current user
+
     Route::middleware(['scope:admin'])->delete('/users/{user}', [UserController::class, 'destroy']);
+    Route::get('/users/verify/email', [UserController::class, 'isEmailisAlreadyRegistered']);
+
 
 
 
